--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+body {font-family: 'Satisfy', cursive;
 
-body {
     text-align: center;
     background: rgb(153, 85, 21);
 }
